--- a/Aula 12 - Visualização de dados - Desafio 1.ipynb
+++ b/Aula 12 - Visualização de dados - Desafio 1.ipynb
@@ -364,7 +364,7 @@
    "source": [
     "graficos = sns.barplot(x='Categoria', y='ValorVenda', data=df, orient='v')\n",
     "# O método sns.barplot vair retornar uma lista de sub métodos utilizando os catainers para acessar o texto dos rótulos para cada coluna, \n",
-    "# desta forma o python entende que ele deve adicionar um rótulo em cada coluna, de acordo com o comando graficos.conta\n",
+    "# desta forma o python entende que ele deve adicionar um rótulo em cada coluna, de acordo com o comando graficos.containers\n",
     "\n",
     "graficos.bar_label(graficos.containers[0])"
    ]
